syntax = "proto3";

import "common.proto";
option java_multiple_files = true;
option java_package = "io.github.mobotx";

package mobot;

service Camera{
  rpc SetCameraMetadata (CameraMetadata) returns (Success) {}
  rpc NewCameraData (CompressedImage) returns (Success) {}
}

message CompressedImage{
  bytes data = 1;
}

message CameraMetadata{
  int32 width = 1;
  int32 height = 2;
  int32 channels = 3;
  int32 color_depth = 4;
}
